package EnumLib;

public enum BasicMsg {
    EXIT
}
